# smartshoe

./: .gitignore  ANDROID_STUDIO_PROXY_SETUP.md  LLM_INTEGRATION.md  README.md  build.gradle.kts  build_output.txt  changes.patch  gradle.properties  settings.gradle.kts  setup-mac.sh
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/: CODE_ANALYSIS_REPORT.md  REFACTORING_PLAN.md
app/src/androidTest/java/com/example/smartshoe/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
app/src/main/cpp/llama.cpp/: README.md
app/src/main/cpp/llama.cpp/llama.cpp/: CMakeLists.txt
app/src/main/cpp/llama.cpp/llama.cpp/ggml/: CMakeLists.txt
app/src/main/java/com/example/smartshoe/: AppIcons.kt  BottomNavigation.kt  Expandable.kt  MainActivity.kt  SmartShoeApplication.kt  UIConstants.kt
app/src/main/java/com/example/smartshoe/.trae/documents/: code-optimization-plan.md  code-optimization-summary.md
app/src/main/java/com/example/smartshoe/config/: AppConfig.kt
app/src/main/java/com/example/smartshoe/data/: CircularBuffer.kt  datamodels.kt
app/src/main/java/com/example/smartshoe/data/local/: AppDatabase.kt  CircularBuffer.kt  LocalDataSource.kt
app/src/main/java/com/example/smartshoe/data/manager/: AuthManager.kt  BluetoothConnectionManager.kt  BluetoothResourceManager.kt  CacheManager.kt  MemoryLeakDetector.kt  PerformanceMonitor.kt  SensorDataManager.kt  UserPreferencesManager.kt
app/src/main/java/com/example/smartshoe/data/model/: SensorDataModels.kt  UserModels.kt
app/src/main/java/com/example/smartshoe/data/remote/: AiAssistantApiService.kt  AiAssistantApiServiceImpl.kt  AiAssistantModels.kt  AuthApiService.kt  BaseApiService.kt  NetworkException.kt  RequestBatcher.kt  RequestCache.kt  RequestManager.kt  SensorDataApiService.kt  SseClient.kt
app/src/main/java/com/example/smartshoe/data/repository/: AiAssistantRepositoryImpl.kt  AiConversationRepositoryImpl.kt  AuthManager.kt  AuthRepository.kt  AuthRepositoryImpl.kt  BluetoothResourceManager.kt  DebugManager.kt  HistoryRecordManager.kt  HistoryRecordRepository.kt  HistoryRecordRepositoryImpl.kt  MemoryLeakDetector.kt  PerformanceMonitor.kt  PerformanceTestUtils.kt  SensorDataManager.kt  SensorDataProcessor.kt  SensorDataRemoteRepositoryImpl.kt  SensorDataRepository.kt  SensorDataRepositoryImpl.kt  UserProfileRepository.kt  UserProfileRepositoryImpl.kt
app/src/main/java/com/example/smartshoe/debug/ui/: DebugSection.kt
app/src/main/java/com/example/smartshoe/debug/util/: PerformanceTestUtils.kt
app/src/main/java/com/example/smartshoe/di/: AppModule.kt  RepositoryModule.kt
app/src/main/java/com/example/smartshoe/draw/: DrawSensor.kt  DrawUtils.kt
app/src/main/java/com/example/smartshoe/llm/: InferenceBackend.kt  LLMManager.kt  LLMNative.kt  ModelDownloadManager.kt
app/src/main/java/com/example/smartshoe/section/: DataRecordScreenSection.kt  HistoryScreenSection.kt  MainScreenSection.kt  PerformanceMonitorSection.kt  SettingScreenSection.kt  src.code-workspace
app/src/main/java/com/example/smartshoe/util/: AnimationDefaults.kt  ColorUtils.kt  DateTimeUtils.kt
app/src/main/java/com/example/smartshoe/utils/: AnimationDefaults.kt  ChartConfigUtils.kt  DateTimeUtils.kt  PreferencesUtils.kt
app/src/main/res/drawable/: add_conversation.xml  add_conversation_bubble.xml  add_conversation_plus.xml  aizhineng.xml  connect_device.xml  conversation_list.xml  devicelist.xml  disconnect_device.xml  icon_foot.xml  minds.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/smartshoe/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+105 files in other folders)
